Fix long names on mobile

--- a/resources/assets/sass/pages/_list.scss
+++ b/resources/assets/sass/pages/_list.scss
@@ -48,10 +48,6 @@
         top: 3px;
     }
 
-    .already-packed .item {
-        height: 24px;
-    }
-
     .item-name {
         font-size: 18px;
         height: auto;
